fixed overflowing text

--- a/css/style.css
+++ b/css/style.css
@@ -208,12 +208,12 @@ nav ul li a:hover{
     align-items:center;
     flex-wrap: wrap;
     margin:0 100px 0 100px;
-    
+    width:90%;
 }
 
 .product .itemBox {
     position:relative;
-    width:400px;
+    width:100%;
     height:300px;
     margin:10px;
     display:block;
@@ -483,6 +483,7 @@ nav ul li a:hover{
         height:300px;
     }
 
+   
     
 }
 
@@ -498,5 +499,52 @@ nav ul li a:hover{
 
     .carousel-item img{
         height:210px;
+    }
+
+    #contacts svg{
+        
+        width:20px;
+        height:20px;
+        margin:3px;
+    }
+
+    
+}
+
+
+
+@media(max-width:400px){
+    #bgdetails h3{
+        font-size:8px;
+    }
+    #resume{
+        width:80px;
+        font-size:9px;
+    }
+
+  
+    #contacts svg{
+        
+        width:20px;
+        height:20px;
+        margin:3px;
+    }
+
+    .product .itemBox .project-info p{
+        font-size:8px;
+        margin:10px 0 0 20px;
+        max-width: 190px;
+    }
+    
+    .product .itemBox .project-info h5{
+        font-size:10px;
+        margin:20px 0 0 20px;
+    }
+
+    .product .itemBox .project-btn button{
+        
+       
+        margin-right:0;
+       
     }
 }
